public class Constants
{
    // anim state
    public const string RunForward = "isRunForward";
    public const string RunLeft = "isRunLeft";
    public const string RunRight = "isRunRight";
    public const string RunBackward = "isRunBackward";
    public const string WalkForward = "isWalkForward";
    public const string IsRun = "isRun";
}
